packages/cjs-to-esm/test/snapshots/package-corpus/core-js/full/error/to-string.js
import parent from "../../actual/error/to-string";
const _cjs_default = parent;
export default _cjs_default;
